--- a/about.html
+++ b/about.html
@@ -3,20 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="about.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Finger+Paint&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <style>
-      div.logo {
-        font-family: "Finger Paint", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-      }
-</style>
 <title>Nads</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
@@ -40,6 +33,12 @@
     </ul>
   </div>
 </div>
+
+<div class='main'>
+  <h2 class="first">GTKM</h2>
+  <h2 class="second">GTKM</h2>
+</div>
+
 <script>
     const burger = document.getElementById("burger");
     const navLinks = document.querySelector(".nav-links");
@@ -47,5 +46,6 @@
     burger.addEventListener("click", () => {
       navLinks.classList.toggle("active");
     });
+    
   </script>
 </html>
