Finish the about page. Add Know about me facts. Add carousel for picture

--- a/about.html
+++ b/about.html
@@ -39,6 +39,67 @@
   <h2 class="second">GTKM</h2>
 </div>
 
+<div class="content">
+  <div class="card-container">
+    <div class="card">
+    <div class ="Intro text">
+      <h1> About Me</h1>
+      <p> I’m Daniel Angelo C. Nadal. An aspiring artist and illustrator who wants to focus on frontend and UI/UX design as a medium for my works. Inspired by the greatest minds of the rising generation, I would like to tackle a world of aesthetic and comprehensive designs for the future technologies. In the future of my professional career, I want to innovate new designs and techniques for a comprehensive and aesthetic navigation.I would like to focus and work on my skills on startup companies and build a network that allows me to market my skills to the masses.
+      </p>
+    </div>
+</div>
+
+<div class="card2">
+  <div>
+    <section class="container">
+      <div class="slider-wrapper">
+        <div class="slider">
+          <img id="slide-1" src="techn1.jpg" alt="3D rendering of an imaginary orange planet in space" />
+          <img id="slide-2" src="techn2.jpg" alt="3D rendering of an imaginary green planet in space" />
+          <img id="slide-3" src="tech3.jpg" />
+        </div>
+        <div class="slider-nav">
+          <a href="#slide-1"></a>
+          <a href="#slide-2"></a>
+          <a href="#slide-3"></a>
+        </div>
+      </div>
+      
+
+    </section>
+</div>
+<div class ="Intro text">
+  <h1> Logical</h1>
+  <p> Whether it's a story plot, a puzzle, or even a conversation, I naturally break things down and try to see the bigger picture through the small details. I guess you could say logic is my way of navigating the world—it keeps things grounded. I enjoy asking questions, following trails of thought, and solving problems in a way that makes sense, not just feels right.
+  </p>
+</div>
+
+</div>
+<div>
+  <div class="card3">
+    <div>
+      </div>
+        <div class ="Intro text">
+          <h1> Creativity</h1>
+          <p> Creativity is kind of my default setting. Whether I’m sketching out ideas, designing a layout, or just daydreaming, my mind’s always spinning with visuals and “what ifs.” I love turning abstract thoughts into something tangible—something people can feel or interact with. 
+          </p>
+</div>
+<section class="container">
+  <div class="slider-wrapper">
+    <div class="slider">
+      <img id="slide-4" src="creative1.png" alt="3D rendering of an imaginary orange planet in space" />
+      <img id="slide-5" src="Creativity2.JPG" alt="3D rendering of an imaginary green planet in space" />
+      <img id="slide-6" src="creativity3.JPG" />
+    </div>
+    <div class="slider-nav">
+      <a href="#slide-4"></a>
+      <a href="#slide-5"></a>
+      <a href="#slide-6"></a>
+    </div>
+  </div>
+  </section>
+  </div>
+</div>
 <script>
     const burger = document.getElementById("burger");
     const navLinks = document.querySelector(".nav-links");
