--- a/techstack.html
+++ b/techstack.html
@@ -40,96 +40,17 @@
     </ul>
   </div>
 </div>
-
-<div class ="content">
-      <div class="main-content">
-      <div class="tech-intro">
-        <div class="tech-text">
-          <h1>Tech Stack</h1>
-        </div>
-      </div>
-      <div class="tech-stack-container">
-        <div class="container section-wrapper">
-          <h2 class="section-title">Languages</h2>  
-          <div class="row g-4 justify-content-center">
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/c.svg" class="tech-icon" alt="C">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/java.svg" class="tech-icon" alt="Java">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/css.svg" class="tech-icon" alt="CSS">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/html.svg" class="tech-icon" alt="HTML">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/sql.svg" class="tech-icon" alt="SQL">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="container section-wrapper">
-          <h2 class="section-title">Development Tools</h2>
-          <div class="row g-4 justify-content-center">
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/netbeans.png" class="tech-icon tech-icon-netbeans" alt="Netbeans">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/vscode.svg" class="tech-icon tech-icon-wide" alt="VSCode">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/andrdstd.svg" class="tech-icon" alt="Android Studio">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/oracleapex.svg" class="tech-icon tech-icon-wide" alt="Oracle Apex">
-                </div>
-              </div>
-            </div>
-            <div class="col-md-2 col-6">
-              <div class="card text-center bg-dark text-white p-3">
-                <div class="card-img-container">
-                  <img src="image/git.png" class="tech-icon tech-icon-square" alt="Git">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
+<div class="mobilers">
+<section class="preview__container" style="--img: url(https://assets.codepen.io/2392/360__homepage--full.png)">
+	<article class="preview mobile" tabindex="0"></article>
+	<article class="preview mobile" tabindex="0"></article>
+	<article class="preview mobile" tabindex="0"></article>
+	<article class="preview mobile" tabindex="0"></article>
+	<article class="preview mobile" tabindex="0"></article>
+	<article class="preview mobile" tabindex="0"></article>
+	<article class="preview mobile" tabindex="0"></article>	
+</section>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
 <script>
     const burger = document.getElementById("burger");
