Add Content for TechStack

--- a/techstack.html
+++ b/techstack.html
@@ -40,7 +40,7 @@
   </div>
 </div>
 <div class="mobilers">
-<section class="preview__container" style="--img: url(https://assets.codepen.io/2392/360__homepage--full.png)">
+<section class="preview__container" style="--img: url('techstacckkksss.png')">
 	<article class="preview mobile" tabindex="0"></article>
 	<article class="preview mobile" tabindex="0"></article>
 	<article class="preview mobile" tabindex="0"></article>
